Block Directory: Fix downloadable block item alignment

--- a/packages/block-directory/src/components/downloadable-block-list-item/style.scss
+++ b/packages/block-directory/src/components/downloadable-block-list-item/style.scss
@@ -69,6 +69,10 @@
 		align-items: center;
 		justify-content: center;
 	}
+
+	.is-installing & {
+		margin-right: $grid-unit-20 + 6px;
+	}
 }
 
 .block-directory-block-ratings {
